--- a/AlugaTooC-Sharp/Views/Home/formCidadesEstados.cshtml
+++ b/AlugaTooC-Sharp/Views/Home/formCidadesEstados.cshtml
@@ -9,10 +9,9 @@
     <form method="" action="">
         <center>
             <div class="form-group">
-                <select name="cidade" class="custom-select"></select>
+                <select name="estado" class="custom-select"></select>
                 <select name="cidade" class="custom-select"></select>
             </div>
-           
             <input type="submit" name="btnCadastraEndereco" value="Cadastrar" class="btn btn-success"><br><br>
         </center>
     </form>
