--- a/AlugaTooC-Sharp/Views/Shared/_Layout.cshtml
+++ b/AlugaTooC-Sharp/Views/Shared/_Layout.cshtml
@@ -12,12 +12,8 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
                 @Html.ActionLink("AlugaToo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <img src="~/Imagens/toologo.png" />
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
