--- a/AlugaTooC-Sharp/Views/Home/formCadastroPessoa.cshtml
+++ b/AlugaTooC-Sharp/Views/Home/formCadastroPessoa.cshtml
@@ -5,7 +5,7 @@
 <h3>@ViewBag.Message</h3>
 
 <div class="container">
-    <form method="post" action="CadastraPessoa">
+    <form method="post" action="CadastroSucesso">
         <center>
             <div class="form-group">
                 <input type="text" name="nome" placeholder="Digite seu nome completo" class="form-control"><br>
@@ -15,6 +15,11 @@
                 <input type="number" name="cpf" placeholder="Digite o seu CPF" class="form-control"><br>
 
                 <input type="number" name="rg" placeholder="Digite o seu RG" class="form-control"><br>
+            </div>
+            <input type="text" name="usuario" placeholder="Digite um usuario para acessar o site" class="form-control"><br>
+            <div>
+                <input type="password" name="senha" placeholder="Digite uma senha segura" class="form-control"><br>
+                <input type="password" name="senha1" placeholder="Confirme sua senha" class="form-control"><br>
             </div>
             <input type="submit" name="btnCadastraEndereco" value="Cadastrar" class="btn btn-success"><br><br>
         </center>
