--- a/AlugaTooC-Sharp/Views/Home/formCadastroPessoa.cshtml
+++ b/AlugaTooC-Sharp/Views/Home/formCadastroPessoa.cshtml
@@ -12,11 +12,11 @@
 
                 <input type="date" name="nascimento" placeholder="Digite o sua data de nascimento" class="form-control"><br>
 
-                <input type="number" name="cpf" placeholder="Digite o seu CPF" class="form-control"><br>
+                <input type="text" name="cpf" placeholder="Digite o seu CPF" class="form-control cpf-mask"><br>
 
                 <input type="number" name="rg" placeholder="Digite o seu RG" class="form-control"><br>
             </div>
-            <input type="text" name="usuario" placeholder="Digite um usuario para acessar o site" class="form-control"><br>
+            <input type="email" name="usuario" placeholder="Digite um usuario para acessar o site" class="form-control"><br>
             <div>
                 <input type="password" name="senha" placeholder="Digite uma senha segura" class="form-control"><br>
                 <input type="password" name="senha1" placeholder="Confirme sua senha" class="form-control"><br>
