--- a/AlugaTooC-Sharp/Views/Privadas/PaginaUsuario.cshtml
+++ b/AlugaTooC-Sharp/Views/Privadas/PaginaUsuario.cshtml
@@ -4,7 +4,7 @@
 <body>
     <div class="container">
         <form method="get" action="btnPaginaUsuario">
-            <input type="submit" name="btn" id="alugarProduto" value="ALUGAR PRODUTO" class="btn btn-success">
+            <input type="submit" name="btn"  value="ALUGAR PRODUTO" class="btn btn-success">
             <input type="submit" name="btn" value="Ver meus produtos" class="btn btn-danger">
         </form>
         <br />
