--- a/AlugaTooC-Sharp/Views/Home/Login.cshtml
+++ b/AlugaTooC-Sharp/Views/Home/Login.cshtml
@@ -16,9 +16,9 @@
             <h2 class="text-center">Login</h2>
             <form method="post" action="EfetuaLogin">
 
-                <input type="email" name="usuario" placeholder="Digite o seu usuário" class="form-control"><br>
+                <input type="email" name="usuario" placeholder="Digite o seu usuário" class="form-control" required><br>
 
-                <input type="password" name="senha" placeholder="Digite a sua senha" class="form-control"><br>
+                <input type="password" name="senha" placeholder="Digite a sua senha" class="form-control" required><br>
 
                 <input type="submit" name="btnLogin" value="Acessar" class="btn btn-success btn-block">
 
