--- a/AlugaTooC-Sharp/Views/Home/formCidadesEstados.cshtml
+++ b/AlugaTooC-Sharp/Views/Home/formCidadesEstados.cshtml
@@ -10,17 +10,17 @@
     <form method="post" action="formCadastroPessoa">
         <center>
             <div class="form-group">
-                <input type="number" name="estado" placeholder="Estado" class="form-control"><br>
+                <input type="number" name="estado" placeholder="Estado" class="form-control" required><br>
 
-                <input type="number" name="cidade" placeholder="Cidade" class="form-control"><br>
+                <input type="number" name="cidade" placeholder="Cidade" class="form-control" required><br>
 
-                <input type="text" name="bairro" placeholder="Digite Bairro" class="form-control"><br>
+                <input type="text" name="bairro" placeholder="Digite Bairro" class="form-control" required><br>
 
-                <input type="text" name="logradouro" placeholder="Logradouro" class="form-control"><br>
+                <input type="text" name="logradouro" placeholder="Logradouro" class="form-control" required><br>
 
-                <input type="number" name="numero" placeholder="Seu número" class="form-control"><br>
+                <input type="number" name="numero" placeholder="Seu número" class="form-control" required><br>
             </div>
-            <input type="submit" name="btnCadastraEndereco" value="Cadastrar" class="btn btn-success"><br><br>
+            <input type="submit" name="btnCadastraEndereco" value="Cadastrar" class="btn btn-success" required><br><br>
         </center>
     </form>
 </div>
