--- a/AlugaTooC-Sharp/Views/Privadas/PaginaUsuario.cshtml
+++ b/AlugaTooC-Sharp/Views/Privadas/PaginaUsuario.cshtml
@@ -1,11 +1,12 @@
 ﻿
+<h3>@ViewBag.Message</h3>
 <!DOCTYPE html>
 <html lang="pt-br">
 <body>
     <div class="container">
         <form method="get" action="btnPaginaUsuario">
-            <input type="submit" name="btn"  value="ALUGAR PRODUTO" class="btn btn-success">
-            <input type="submit" name="btn" value="Ver meus produtos" class="btn btn-danger">
+            <input type="button" name="btn" value="ALUGAR PRODUTO" class="btn btn-success">
+            <input type="button" name="btn" value="Ver meus produtos" class="btn btn-danger">
         </form>
         <br />
         <form method="POST">
@@ -23,9 +24,9 @@
                     </div>
                     <div class="modal-body">
                         <form method="post" action="AlteraEmail">
-                            <input type="text" name="usuario" placeholder="Digite seu novo e-mail" class="form-control">
+                            <input type="text" name="usuario" placeholder="Digite seu novo e-mail" class="form-control" required>
                             <br>
-                            <input type="password" name="senha" placeholder="Digite sua senha" class="form-control">
+                            <input type="password" name="senha" placeholder="Digite sua senha" class="form-control" required>
                             <br />
                             <input type="submit" name="btnAlteraEmail" value="Alterar" />
                         </form>
