--- a/AlugaTooC-Sharp/Views/Home/Login.cshtml
+++ b/AlugaTooC-Sharp/Views/Home/Login.cshtml
@@ -23,7 +23,7 @@
                 <input type="submit" name="btnLogin" value="Acessar" class="btn btn-success btn-block">
 
                 <div class="center" style="margin-top: 20px;">
-                    @Html.ActionLink("Cadastre-se", "formCidadesEstados", "home");
+                    @Html.ActionLink("Cadastre-se", "formEstado", "home");
                     @*@<a href="~/Views/Home/formCadastroEndereco">Cadastre-se</a>*@
                     @*@ <a class="btn btn-success" asp-action="formCadastroEndereco">Cadastre-se</a>*@
                 </div>
