--- a/AlugaTooC-Sharp/Views/Privadas/CadastroProduto.cshtml
+++ b/AlugaTooC-Sharp/Views/Privadas/CadastroProduto.cshtml
@@ -1,7 +1,43 @@
-﻿
-@{
-    ViewBag.Title = "CadastroProduto";
-}
-
-<h2>CadastroProduto</h2>
-
+﻿<html lang="pt-br">
+<body>
+    <div class="container">
+        <form method="POST" action="http://localhost/alugatoo/envia.php" enctype="multipart/form-data">
+            <div class="pull-right">
+                <input type="button" data-toggle="modal" data-target="#modalUpload" value="ENVIAR FOTOS"
+                       class="btn btn-success">
+            </div>
+            <div class="modal fade" id="modalUpload" tabindex="-1" role="dialog"
+                 aria-labelledby="modalUpload">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title text-center" id="modalUpload">Envie sua imagem!</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form method="POST" action="http://localhost/alugatoo/envia.php"
+                                  enctype="multipart/form-data">
+                                Selecione sua imagem <input name="arquivo" size="20" type="file" />
+                                <input type="submit" value="Enviar" />
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <br>
+        </form>
+        <form method="POST" action="CadastroProdutoSucesso">
+            <br>
+            <input type="text" name="nome" placeholder="Digite o nome do produto" class="form-control">
+            <br>
+            <input type="text" name="descricao" placeholder="Digite uma descrição" class="form-control">
+            <br>
+            <input type="number" name="valor" placeholder="Digite o valor do aluguel" class="form-control">
+            <br>
+            <br>
+            <input type="submit" name="btnCadProduto" value="ALUGAR PRODUTO" class="btn btn-success">
+            <br>
+        </form>
+    </div>
+</body>
+</html>
