--- a/AlugaTooC-Sharp/Views/Shared/_Layout.cshtml
+++ b/AlugaTooC-Sharp/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Meu Aplicativo ASP.NET</title>
@@ -9,26 +9,34 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-expand-lg  btn-success navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 @Html.ActionLink("AlugaToo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 <img src="~/Imagens/toologo.png" />
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse  collapse">
                 <ul class="nav navbar-nav">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
                     <li>@Html.ActionLink("Início", "Index", "Home")</li>
                     <li>@Html.ActionLink("Sobre", "About", "Home")</li>
                     <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Login", "Login", "Home")</li>
+                    @if (Session["usuario"] == null)
+                    {
+                        <li>@Html.ActionLink("Login", "Login", "Home")</li>
+                    }
                     @if (Session["usuario"] != null)
                     {
                         <li>@Html.ActionLink("PaginaUsuario", "PaginaUsuario", "Privadas")</li>
+                        <li>@Html.ActionLink("Sair", "PaginaLogOut", "Privadas")</li>
                     }
                 </ul>
             </div>
         </div>
-    </div>
+    </nav>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
