--- a/AlugaTooC-Sharp/Views/Privadas/PaginaUsuario.cshtml
+++ b/AlugaTooC-Sharp/Views/Privadas/PaginaUsuario.cshtml
@@ -22,6 +22,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title text-center" id="modalEditaEmail">Altere seu usuario de acesso!</h4>
+                        <h5 class="text-center">Seu usuario atual é: @ViewBag.EmailSession</h5>
                     </div>
                     <div class="modal-body">
                         <form method="post" action="AlteraEmail">
