--- a/AlugaTooC-Sharp/Views/Privadas/CadastroProduto.cshtml
+++ b/AlugaTooC-Sharp/Views/Privadas/CadastroProduto.cshtml
@@ -1,9 +1,14 @@
 ﻿<html lang="pt-br">
 <body>
     <div class="container">
-        <form method="POST" action="http://localhost/alugatoo/envia.php" enctype="multipart/form-data">
-            <div class="pull-right">
-                <input type="button" data-toggle="modal" data-target="#modalUpload" value="ENVIAR FOTOS"
+        @if (ViewBag.ImagemEnviada == true)
+        {
+            <span>Imagem enviada!</span>
+        }
+        <form method="post" action="EnvioImagem" enctype="multipart/form-data">
+            <br />
+            <div>
+                <input type="button" data-toggle="modal" data-target="#modalUpload" value="Enviar Imagem"
                        class="btn btn-success">
             </div>
             <div class="modal fade" id="modalUpload" tabindex="-1" role="dialog"
@@ -13,27 +18,27 @@
                         <div class="modal-header">
                             <h4 class="modal-title text-center" id="modalUpload">Envie sua imagem!</h4>
                         </div>
-                        <div class="modal-body">
-                            <form method="POST" action="http://localhost/alugatoo/envia.php"
-                                  enctype="multipart/form-data">
-                                Selecione sua imagem <input name="arquivo" size="20" type="file" />
-                                <input type="submit" value="Enviar" />
-                            </form>
+                        <div class="modal-body" enctype="multipart/form-data">
+                            Selecione sua imagem <input name="file" type="file" /> <br />
+                            <input type="submit" value="Enviar" />
                         </div>
                     </div>
                 </div>
             </div>
-            <br>
-            <br>
         </form>
         <form method="POST" action="CadastroProdutoSucesso">
             <br>
-            <input type="text" name="nome" placeholder="Digite o nome do produto" class="form-control">
+            Selecione uma categoria: <select name="categoria" class="custom-select" required>
+                @foreach (var categoria in ViewBag.ListCategoria)
+                {
+                    <option value="@categoria.Id">@categoria.Nome</option>
+                }
+            </select><br><br>
+            <input type="text" name="nome" placeholder="Digite o nome do produto" class="form-control" required>
             <br>
-            <input type="text" name="descricao" placeholder="Digite uma descrição" class="form-control">
+            <input type="text" name="descricao" placeholder="Digite uma descrição" class="form-control" required>
             <br>
-            <input type="number" name="valor" placeholder="Digite o valor do aluguel" class="form-control">
-            <br>
+            <input type="number" name="valor" placeholder="Digite o valor do aluguel" class="form-control" required>
             <br>
             <input type="submit" name="btnCadProduto" value="ALUGAR PRODUTO" class="btn btn-success">
             <br>
