--- a/AlugaTooC-Sharp/Views/Home/formCadastroPessoa.cshtml
+++ b/AlugaTooC-Sharp/Views/Home/formCadastroPessoa.cshtml
@@ -12,7 +12,7 @@
 
                 <input type="date" name="nascimento" placeholder="Digite o sua data de nascimento" class="form-control" required><br>
 
-                <input type="text" name="cpf" placeholder="Digite o seu CPF" class="form-control cpf-mask" required><br>
+                <input type="text" mask="999.999.999-99" max=11 name="cpf"  placeholder="Digite o seu CPF" class="form-control cpf-mask" required><br>
 
                 <input type="number" name="rg" placeholder="Digite o seu RG" class="form-control" required><br>
             </div>
