--- a/AlugaTooC-Sharp/Views/Home/Index.cshtml
+++ b/AlugaTooC-Sharp/Views/Home/Index.cshtml
@@ -5,95 +5,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <body>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="/Images/images.jpg" alt="ASP.NET" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how to build ASP.NET apps that can run anywhere.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="~/Images/images.jpg" alt="Visual Studio" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        There are powerful new features in Visual Studio for building modern web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="/Images/images.jpg" alt="Package Management" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Bring in libraries from NuGet and npm, and automate tasks using Grunt or Gulp.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="/Images/images.jpg" alt="Microsoft Azure" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+    <div class="jumbotron">
+        <h1>Ferramentas paradas e sem uso?</h1>
+        <p class="lead">Alugue já suas ferramentas e ganhe dinheiro extra por horas uso, aproveite essa grande oportunidade!</p>
+        <p><a href="/Home/About" class="btn btn-primary btn-lg">Leia Mais &raquo;</a></p>
     </div>
-
-
-
-
-    <div class="container">
-        <!-- Aqui começa o conteudo -->
-        <div class="row">
-            @foreach (var produto in Model)
-            {
-                <div class="container">
-                    <div class="card-deck mb-3 text-center">
-                        <div class="card mb-4 box-shadow">
-                            <div class="card-header">
-                                <h4 class="my-0 font-weight-normal">@produto.Nome</h4>
-                            </div>
-                            <div class="card-body">
-                                <h1 class="card-title pricing-card-title">R$ @produto.valor <small class="text-muted">/ hora</small></h1>
-                                <ul class="list-unstyled mt-3 mb-4">
-                                    <li>@produto.Descricao</li>
-                                    <li><img src="@produto.caminhoImagem" width="150" height="150" /></li>
-                                </ul>
-                                <button type="button" class="btn btn-lg btn-block btn-outline-primary">Alugue agora!</button>
-                            </div>
+    <!-- Aqui começa o conteudo -->
+    <div class="row">
+        @foreach (var produto in Model)
+        {
+            <div class="container">
+                <div class="card-deck mb-3 text-center">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header">
+                            <h4 class="my-0 font-weight-normal">@produto.Nome</h4>
+                        </div>
+                        <div class="card-body">
+                            <h1 class="card-title pricing-card-title">R$ @produto.valor <small class="text-muted">/ hora</small></h1>
+                            <ul class="list-unstyled mt-3 mb-4">
+                                <li>@produto.Descricao</li>
+                                <li><img src="@produto.caminhoImagem" width="150" height="150" /></li>
+                            </ul>
+                            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Alugue agora!</button>
                         </div>
                     </div>
-                </div><!-- div row conteudo -->
-            }
-        </div>
+                </div>
+            </div><!-- div row conteudo -->
+        }
+    </div>
 </body>
 </html>
