--- a/AlugaTooC-Sharp/Views/Home/About.cshtml
+++ b/AlugaTooC-Sharp/Views/Home/About.cshtml
@@ -1,7 +1,9 @@
-﻿@{
-    ViewBag.Title = "Sobre";
-}
+﻿
 <h2>@ViewBag.Title</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Alugue ferramentas proprietárias pelo tempo que quiser e por um preço que você só encontra aqui!</p>
+<div class="jumbotron">
+    <h2>Ferramentas paradas e sem uso?</h2>
+    <p>Alugue ferramentas proprietárias pelo tempo que quiser e por um preço que você só encontra aqui!</p>
+    <p class="lead">Alugue já suas ferramentas e ganhe dinheiro extra por horas uso, aproveite essa grande oportunidade!</p>
+    <p class="lead">Você só paga uma pequena taxa de de 0,05% para ajudar na administração do nosso site.</p>
+    <p class="lead">Os benefícios são incríveis!</p>
+</div>
