--- a/AlugaTooC-Sharp/Views/Home/Index.cshtml
+++ b/AlugaTooC-Sharp/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="jumbotron">
         <h1>Ferramentas paradas e sem uso?</h1>
         <p class="lead">Alugue já suas ferramentas e ganhe dinheiro extra por horas uso, aproveite essa grande oportunidade!</p>
-        <p><a href="/Home/About" class="btn btn-primary btn-lg">Leia Mais &raquo;</a></p>
+        <p><a href="/Home/About" class="btn btn-primary btn-lg">Saiba Mais &raquo;</a></p>
     </div>
     <!-- Aqui começa o conteudo -->
     <div class="row">
